--- a/src/views/myHTML.ejs
+++ b/src/views/myHTML.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>My HTML Page</title><style></style></head><body>
-<div><form><table><label for='text-input'>Patient:</label>
+<div><form><table>
+	<label for='text-input'>Patient:</label>
 <input type='text' id='Patient' name='text-input' placeholder='Enter text here'><br>
 <label for='text-input'>identifier:</label>
 <input type='text' id='identifier' name='text-input' placeholder='Enter text here'><br>
