--- a/web-server/views/testHTML.ejs
+++ b/web-server/views/testHTML.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FHIR Patient Form</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
 </head>
 <body>
     <h2>Patient Information</h2>
