--- a/web-server/views/testHTML.ejs
+++ b/web-server/views/testHTML.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
 </head>
 <body>
-    <h2>Patient Informations</h2>
+    <h2>Patient Information</h2>
     <form action="#" method="post">
         <label for="firstName">First Name:</label>
         <input type="text" id="firstName" name="firstName" value="<%= firstName %>" required><br><br>
