--- a/web-server/views/pages/index.ejs
+++ b/web-server/views/pages/index.ejs
@@ -10,12 +10,10 @@
 </header>
 
 <main>
+  
   <div class="jumbotron">
-    <h1>This is great</h1>
-    <p>Welcome to templating using EJS</p>
-  </div>
-  <div class="jumbotron">
-    <%- include('../partials/dateinput'); %>
+    <h5>Patient</h5>
+    <%- include('../partials/Patient'); %>
         
   </div>
 </main>
