--- a/web-server/views/pages/index.ejs
+++ b/web-server/views/pages/index.ejs
@@ -13,7 +13,7 @@
   
   <div class="jumbotron">
     <h5>Patient</h5>
-    <%- include('../partials/Patient'); %>
+    <%- include('../partials/Patient/Patient'); %>
         
   </div>
 </main>
