--- a/web-server/views/partials/footer.ejs
+++ b/web-server/views/partials/footer.ejs
@@ -1,1 +1,1 @@
-<p class="text-center text-muted">&copy; Copyright 2024 The Awesome People</p>
+<p class="text-center text-muted">&copy; Copyright 2024 1910285@uwtsd.student.ac.uk</p>
