--- a/web-server/views/partials/date.ejs
+++ b/web-server/views/partials/date.ejs
@@ -1,2 +1,2 @@
-<input type="date" name="Patient.birthDate" value='<%= Patient.birthDate %>' />
+<input type="date" name="birthDate" value='<%= Patient.birthDate %>' />
    
