--- a/web-server/views/pages/index.ejs
+++ b/web-server/views/pages/index.ejs
@@ -11,9 +11,10 @@
 
 <main>
   
+
   <div class="jumbotron">
     <h5>Patient</h5>
-    <%- include('../partials/Patient/Patient'); %>
+  <!--  <%- include('../partials/Patient/Patient'); %> -->
         
   </div>
 </main>
