--- a/web-server/views/pages/index.ejs
+++ b/web-server/views/pages/index.ejs
@@ -10,12 +10,10 @@
 </header>
 
 <main>
-  
-
   <div class="jumbotron">
     <h5>Patient</h5>
-  <!--  <%- include('../partials/Patient/Patient'); %> -->
-        
+  <h1>Patient Data</h1>
+  <%- include('../partials/Search/table', { entry: entry }) %>
   </div>
 </main>
 
