--- a/web-server/views/partials/header.ejs
+++ b/web-server/views/partials/header.ejs
@@ -1,11 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">EJS Is Fun</a>
+    <a class="navbar-brand" href="/">App</a>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="/">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/patientSearch">Patient Search</a>
       </li>
     </ul>
   </nav>
