--- a/web-server/views/partials/header.ejs
+++ b/web-server/views/partials/header.ejs
@@ -10,5 +10,8 @@
       <li class="nav-item">
         <a class="nav-link" href="/patientSearch">Patient Search</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/logout">Logout</a>
+      </li>
     </ul>
   </nav>
