--- a/web-server/views/partials/Search/searchResults.ejs
+++ b/web-server/views/partials/Search/searchResults.ejs
@@ -1,7 +1,7 @@
 <table id="searchResults">
   <thead>
     <tr>
-      <th>IDs</th>
+      <th>ID</th>
       <th>Family Name</th>
       <th>Given Name</th>
       <th>Gender</th>
@@ -22,12 +22,17 @@
 </table>
 
 <script>
+    function addEventListeners() {
   document.querySelectorAll('#searchResults tbody tr').forEach(row => {
     row.addEventListener('click', async function() {
       const patientId = this.dataset.id;
       const response = await fetch(`/patient/patientRecord?id=${patientId}`);
       const data = await response.text();
+      
       document.getElementById('patientDetail').innerHTML = data;
+      console.debug("calling addEventListeners() ");
+     
     });
   });
+}
 </script>
