--- a/web-server/views/partials/header.ejs
+++ b/web-server/views/partials/header.ejs
@@ -4,12 +4,23 @@
       <li class="nav-item">
         <a class="nav-link" href="/">Home</a>
       </li>
+      
       <li class="nav-item">
         <a class="nav-link" href="/about">About</a>
       </li>
+
       <li class="nav-item">
         <a class="nav-link" href="/patientSearch">Patient Search</a>
       </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/Outpatient">Caseload</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" href="/Outpatient">Outpatient</a>
+      </li>
+      
       <li class="nav-item">
         <a class="nav-link" href="/logout">Logout</a>
       </li>
