--- a/web-server/views/pages/index.ejs
+++ b/web-server/views/pages/index.ejs
@@ -30,7 +30,7 @@
     <%- include('../partials/footer'); %>
   </footer>
 
-  <script src="../../static/js/index.js"></script>in 
+  <script src="../../static/js/app.js"></script>in 
 </body>
 
 </html>
