--- a/web-server/views/partials/Patient/patientDetail.ejs
+++ b/web-server/views/partials/Patient/patientDetail.ejs
@@ -28,7 +28,7 @@
         <input type="text" id="birthDate" name="birthDate" value="<%= patient.birthDate %>">
       </div>
       <!-- Add more patient details as needed -->
-      <button type="submit">Save</button>
+      <button type="submit">Save</button>calls /fhir/Patient/:id
     </form>
   </div>
   
