--- a/web-server/views/partials/Search/searchResults.ejs
+++ b/web-server/views/partials/Search/searchResults.ejs
@@ -16,6 +16,9 @@
         <td><%= patient.resource.name[0].given[0] %></td>
         <td><%= patient.resource.gender %></td>
         <td><%= patient.resource.birthDate %></td>
+        <td>
+          <button class="delete-btn" data-id="<%= patient.resource.id %>">Delete</button>
+        </td>
       </tr>
     <% }) %>
   </tbody>
