--- a/web-server/views/partials/header.ejs
+++ b/web-server/views/partials/header.ejs
@@ -12,7 +12,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/patientSearch">Patient Search</a>
       </li>
-
+      <li class="nav-item">
+        <a class="nav-link register-link">Register</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="/Outpatient">Caseload</a>
       </li>
