--- a/web-server/views/partials/Search/searchform.ejs
+++ b/web-server/views/partials/Search/searchform.ejs
@@ -1,12 +1,12 @@
     <div>
         <form id="searchForm">
           <label for="surname">Surname:</label>
-          <input type="text" id="surname" name="surname" value="" required>
+          <input type="text" id="surname" name="surname" value="" >
       
           <label for="forename">Forename:</label>
-          <input type="text" id="forename" name="forename" value="" required>
+          <input type="text" id="forename" name="forename" value="" >
       
-          <button type="submit" id="searchPatient" name="searchPatient">Search</button>
+          <button type="submit" id="searchPatientButton" name="searchPatientButton">Search</button>
         </form>
       </div>
       
