--- a/web-server/views/partials/navbar.ejs
+++ b/web-server/views/partials/navbar.ejs
@@ -13,7 +13,7 @@
         <a class="nav-link" href="/patientSearch">Patient Search</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link register-link">Register</a>
+        <a class="nav-link register-link" href="#">Register</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/Outpatient">Caseload</a>
