--- a/web-server/views/partials/header.ejs
+++ b/web-server/views/partials/header.ejs
@@ -12,9 +12,11 @@
       <li class="nav-item">
         <a class="nav-link" href="/patientSearch">Patient Search</a>
       </li>
+      
       <li class="nav-item">
-        <a class="nav-link register-link">Register</a>
+        <a class="nav-link register-link" href="#">Register</a>
       </li>
+      
       <li class="nav-item">
         <a class="nav-link" href="/Outpatient">Caseload</a>
       </li>
@@ -26,5 +28,6 @@
       <li class="nav-item">
         <a class="nav-link" href="/logout">Logout</a>
       </li>
+      
     </ul>
   </nav>
