--- a/web-server/views/pages/index.ejs
+++ b/web-server/views/pages/index.ejs
@@ -8,12 +8,15 @@
 <body class="container">
 
   <header>
+    <%- include('../partials/navbar', { navbarItems }) %>
     <%- include('../partials/header'); %>
+  
   </header>
 
   <main>
     <div class="jumbotron">
       <h5>Patients</h5>
+      
       <%- include('../partials/Search/searchForm', { entry: entry }) %>
       <br/>
       <% if (entry && entry.length> 0) { %>
@@ -31,6 +34,9 @@
   </footer>
 
   <script src="../../static/js/app.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
