--- a/web-server/views/partials/navbar.ejs
+++ b/web-server/views/partials/navbar.ejs
@@ -4,7 +4,11 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
+        
         <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link register-link" href="#">Register</a>
+              </li>
             <% navbarItems.forEach(item => { %>
                 <% if (item.submenu) { %>
                     <li class="nav-item dropdown">
